[package]
name = "tm-prover"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
# external
clap.workspace = true
color-eyre.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# cosmos
cosmrs.workspace = true
tendermint.workspace = true
tendermint-rpc.workspace = true
tendermint-light-client.workspace = true
tendermint-light-client-detector.workspace = true

# quartz
cw-proof.workspace = true