[package]
name = "mtcs-enclave"
version = "0.1.0"
edition = "2021"
authors = ["Informal Systems <hello@informal.systems>"]

[features]
mock-sgx = ["quartz-common/mock-sgx-cw", "quartz-common/mock-sgx-enclave"]

[dependencies]
# external
clap.workspace = true
color-eyre.workspace = true
ecies.workspace = true
hex.workspace = true
k256.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
uuid.workspace = true

# cosmos
cosmrs.workspace = true
cosmwasm-std.workspace = true
tendermint.workspace = true
tendermint-light-client.workspace = true

# quartz
cw-tee-mtcs.workspace = true
mtcs.workspace = true

# quartz
quartz-common = { workspace = true, features = ["full"] }

[dev-dependencies]
cw-multi-test = "2.1.0"

[build-dependencies]
tonic-build.workspace = true
