[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "listen"
path = "src/bin/listen.rs"

[[bin]]
name = "handshake"
path = "src/bin/handshake.rs"

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "mc"
path = "src/bin/deploy-mc.rs"

[dependencies]
cosmrs = { version = "=0.16.0", default-features = false }
once_cell = "1.19.0"
serde_json = "1.0.120"
tokio = { version = "1.38.0" }
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0.86"
serde = "1.0.204"
hex = "0.4.3"
cosmwasm-std = "1.5"
base64 = "0.22.1"
tonic = { version = "0.11.0"}
subtle-encoding = "0.5.1"
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
tendermint-rpc = { version ="0.36.0", features=["websocket-client", "http-client"]}
tendermint = "=0.36.0"
clap = "4.5.10"
# todo remove unnecessary imports

cycles-sync = { path = "../../../packages/cycles-sync"}
tm-prover = { path = "../../../packages/tm-prover"}
quartz-common = { path = "../../../packages/quartz-common", features=["contract"]}
quartz-tee-ra = { path = "../../../packages/quartz-tee-ra"}
mtcs-overdraft = { path = "../../../contracts/overdraft"}
cw-tee-mtcs = { path = "../../contracts/cw-tee-mtcs"}
enclave = { path = "../../enclave"}
regex = "1.10.5"
