[package]
name = "scripts"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "listen"
path = "src/bin/listen.rs"

[[bin]]
name = "handshake"
path = "src/bin/handshake.rs"

[[bin]]
name = "deploy"
path = "src/bin/deploy.rs"

[[bin]]
name = "mc"
path = "src/bin/deploy-mc.rs"

[dependencies]
clap.workspace = true
color-eyre.workspace = true
ecies.workspace = true
hex.workspace = true
k256.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
once_cell = "1.19.0"
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1.0.86"
base64 = "0.22.1"
subtle-encoding = "0.5.1"
tokio-tungstenite = "0.23.1"
futures-util = "0.3.30"
tendermint-rpc = { version ="0.36.0", features=["websocket-client", "http-client"]}

# cosmos
cosmrs.workspace = true
cosmwasm-std.workspace = true
tendermint.workspace = true
tendermint-light-client.workspace = true

# quartz
cw-proof.workspace = true
cw-tee-mtcs.workspace = true
mtcs.workspace = true

# todo remove unnecessary imports

cycles-sync = { workspace = true}
tm-prover = { workspace = true}
quartz-common = { workspace = true, features=["contract"]}
quartz-tee-ra = { workspace = true}
mtcs-overdraft = { path = "../../../../cycles-protocol/contracts/overdraft"}
mtcs-enclave = { path = "../enclave", optional = false}
regex = "1.10.5"
