[package]
name = "transfers-contract"
version = "0.1.0"
edition = "2021"
authors = ["Informal Systems <hello@informal.systems>"]
exclude = ["contract.wasm", "hash.txt"]

[[bin]]
name = "schema"
path = "bin/schema.rs"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
library = []
mock-sgx = ["quartz-common/mock-sgx-cw"]

[dependencies]
# external
sha2 = "0.10.8"
serde_json = "1.0.117"
serde = { version = "1.0.137", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.49" }

# cosmwasm
cosmwasm-schema = { version = "2.0.0", default-features = false }
cosmwasm-std = { version = "2.0.0", default-features = false, features = ["std"] }
cw-storage-plus = { version = "2.0.0", default-features = false }
cw-utils = "2.0.0"
cw20-base = { version = "2.0.0", features = ["library"] }
cw2 = "2.0.0"

# quartz
quartz-common = { path = "../../../core/quartz-common", features=["contract"]}
