[package]
name = "quartz-app-transfers-enclave"
version = "0.1.0"
edition = "2021"
authors = ["Informal Systems <hello@informal.systems>"]
default-run = "quartz-app-transfers-enclave"

[[bin]]
name = "encrypt"
path = "bin/encrypt.rs"

[features]
mock-sgx = ["quartz-common/mock-sgx-cw", "quartz-common/mock-sgx-enclave"]
default = []

[dependencies]
# external
anyhow.workspace = true
clap.workspace = true
color-eyre.workspace = true
ecies.workspace = true
hex.workspace = true
k256.workspace = true
prost.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tonic.workspace = true
tendermint-rpc = { workspace=true, features=["websocket-client", "http-client"]}
reqwest.workspace = true
futures-util = "0.3.30"

# cosmos
cosmrs.workspace = true
cosmwasm-std.workspace = true
cycles-sync.workspace = true
tendermint.workspace = true
tendermint-light-client.workspace = true
transfers-contract.workspace = true

# quartz
quartz-common = { workspace=true, features=["full"]}

[dev-dependencies]
cw-multi-test = "2.1.0"

[build-dependencies]
tonic-build.workspace = true
