[package]
name = "quartz-app-transfers-enclave"
version = "0.1.0"
edition = "2021"
authors = ["Informal Systems <hello@informal.systems>"]
default-run = "quartz-app-transfers-enclave"

[[bin]]
name = "encrypt"
path = "bin/encrypt.rs"

[features]
mock-sgx = ["quartz-common/mock-sgx-cw", "quartz-common/mock-sgx-enclave"]
default = []

[dependencies]
# external
async-trait = "0.1.81"
anyhow = { version = "1.0.86", features = ["backtrace"] }
clap = { version = "4.1.8", default-features = false, features = ["derive", "std"] }
color-eyre = { version = "0.6.2", default-features = false }
ecies = { version = "0.2.3", default-features = false, features = ["pure"] }
hex = { version = "0.4.3", default-features = false }
k256 = { version = "0.13.2", default-features = false, features = ["ecdsa", "alloc"] }
prost = { version = "=0.13.1", default-features = false }
serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.94", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10.8", default-features = false }
thiserror = { version = "1.0.49", default-features = false }
tokio = { version = "=1.39.2", default-features = false, features = ["macros", "rt"] }
tonic = { version = "=0.12.1", default-features = false, features = ["codegen", "prost", "transport"] }
futures-util = "0.3.30"

# cosmos
cosmrs = { version = "=0.17.0", default-features = false }
cosmwasm-std = { version = "2.1.1", default-features = false, features = ["std"] }
tendermint = { version = "=0.38.1", default-features = false }
tendermint-rpc = { version = "=0.38.1", default-features = false }
tendermint-light-client = { version = "=0.38.1", default-features = false, features = ["rust-crypto"] }
transfers-contract = { path = "../contracts", default-features = false }

# quartz
# quartz-common = { git = "ssh://git@github.com/informalsystems/cycles-quartz.git", features=["full"]}
quartz-common = { path = "../../../core/quartz-common", features=["full"]}

[dev-dependencies]
cw-multi-test = "2.1.0"

[build-dependencies]
tonic-build = { version = "=0.12.1", default-features = false, features = ["prost", "transport"] }
