[package]
name = "cw-proof"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["blockchain", "cosmos", "cosmwasm", "cycles", "quartz"]
readme = "README.md"

[dependencies]
# external
clap.workspace = true
displaydoc.workspace = true
prost.workspace = true
serde.workspace = true
serde_with.workspace = true

# cosmos
cosmrs.workspace = true
ics23.workspace = true
tendermint.workspace = true
tendermint-rpc.workspace = true

[dev-dependencies]
hex.workspace = true
