[package]
name = "tm-stateless-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
displaydoc = { version = "0.2.4", default-features = false }
tendermint = { version = "=0.34.0", default-features = false }
tendermint-light-client = { version = "=0.34.0", default-features = false, features = ["rust-crypto"] }
