[package]
name = "quartz-contract-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["cryptography::cryptocurrencies", "wasm"]
keywords = ["cosmos", "cosmwasm", "cycles", "quartz", "sgx"]
readme = "README.md"
description = """
A CosmWasm framework for securely interacting with Intel SGX enclaves.
"""

[features]
default = []
mock-sgx = []
std = ["k256/std", "serde/std", "serde_json/std", "sha2/std", "cosmwasm-std/std"]
library = []

[dependencies]
# external
ciborium.workspace = true
hex.workspace = true
k256.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
sha2.workspace = true
thiserror.workspace = true

# cosmos
cw-storage-plus.workspace = true
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true

# quartz
quartz-dcap-verifier-msgs.workspace = true
quartz-tee-ra.workspace = true
quartz-tcbinfo-msgs.workspace = true

[dev-dependencies]
serde_json.workspace = true
