[package]
name = "quartz-cw-proof"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["cryptography::cryptocurrencies", "wasm"]
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"
description = """
Merkle proofs of CosmWasm contract state. This crate contains proof types and a verifier implementation.
"""

[dependencies]
# external
clap.workspace = true
displaydoc.workspace = true
prost.workspace = true
serde.workspace = true
serde_with.workspace = true

# cosmos
cosmrs.workspace = true
ics23.workspace = true
tendermint.workspace = true
tendermint-rpc.workspace = true

[dev-dependencies]
hex.workspace = true
