[package]
name = "quartz-dcap-verifier"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["cryptography::cryptocurrencies", "wasm"]
keywords = ["cosmos", "cosmwasm", "cycles", "quartz", "sgx"]
readme = "README.md"
description = """
Standalone CosmWasm smart contract for verifying Intel SGX DCAP attestations that can be called by other contracts.
"""

exclude = [
    # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer:0.14.0
"""

[dependencies]
# external
ciborium.workspace = true

# cosmos
cosmwasm-schema.workspace = true
cosmwasm-std.workspace = true

# quartz
quartz-dcap-verifier-msgs.workspace = true
quartz-tee-ra.workspace = true

# patch indirect deps
getrandom = { version = "0.2.15", features = ["js"] }

[dev-dependencies]
