[package]
name = "quartz-enclave-core"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["cryptography::cryptocurrencies", "hardware-support", "wasm"]
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"
description = """
A Rust framework for building Intel SGX enclaves managed by a CosmWasm contract.
"""

[features]
mock-sgx = ["quartz-contract-core/mock-sgx"]

[dependencies]
# external
anyhow.workspace = true
async-trait.workspace = true
sha2 = { workspace = true }
clap.workspace = true
color-eyre.workspace = true
ecies.workspace = true
futures-util.workspace = true
hex.workspace = true
k256.workspace = true
rand.workspace = true
reqwest = { workspace = true, features = ["blocking"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tonic.workspace = true
tokio.workspace = true
tower.workspace = true
urlencoding.workspace = true

# mobilecoin
mc-sgx-dcap-sys-types.workspace = true

# cosmos
cosmrs.workspace = true
cosmwasm-std.workspace = true
tendermint.workspace = true
tendermint-light-client.workspace = true
tendermint-rpc = { workspace = true, features = ["websocket-client", "http-client"] }

# quartz
quartz-cw-proof.workspace = true
quartz-contract-core.workspace = true
quartz-proto.workspace = true
quartz-tee-ra.workspace = true
quartz-tm-stateless-verifier.workspace = true
