[package]
name = "quartz-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"
description = """
"""


[dependencies]
# external
prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
