[package]
name = "quartz-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
keywords = ["blockchain", "cosmos", "tendermint", "cycles", "quartz"]
readme = "README.md"
description = """
Protobuf types defining the Quartz handshake to initialize connection between a smart contract and trusted execution environment.
"""


[dependencies]
# external
prost.workspace = true
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
