[package]
name = "quartz-proto"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
categories = ["cryptography::cryptocurrencies", "wasm"]
keywords = ["cosmos", "cosmwasm", "cycles", "quartz", "sgx"]
readme = "README.md"
description = """
Protobuf types defining the Quartz handshake to initialize connection between a smart contract and trusted execution environment.
"""


[dependencies]
# external
prost = { workspace = true, features = ["derive"] }
tonic.workspace = true

[build-dependencies]
tonic-build.workspace = true
